Clean up theme and agenda directory

--- a/emacs.org
+++ b/emacs.org
@@ -65,6 +65,58 @@ You can also use =M-x auto-package-update-now= to update right now!
 
 #+end_src
 
+* Theme
+Only enable (tangle) one at a time.
+**** Gruvbox
+#+begin_src emacs-lisp
+  (use-package gruvbox-theme)
+
+  ; make load functions for run-at-time functions
+  (defun jmn-load-gruvbox-dark-hard ()
+    "Theme for dark time"
+    (interactive)
+    (load-theme 'gruvbox-dark-hard t)
+    (set-face-background 'line-number
+                         (face-attribute 'default :background))
+    (with-eval-after-load 'org
+      (set-face-foreground 'org-priority (face-foreground font-lock-constant-face))))
+
+  (defun jmn-load-gruvbox-light-medium()
+    "Theme for light time"
+    (interactive)
+    (load-theme 'gruvbox-light-medium t)
+    (set-face-background 'line-number
+                         (face-attribute 'default :background))
+    (with-eval-after-load 'org
+      (set-face-foreground 'org-priority (face-foreground font-lock-constant-face))))
+#+end_src
+
+**** Monokia
+Good bright mode for bright days.
+#+begin_src emacs-lisp :tangle no
+  (use-package monokai-theme
+        :init (load-theme 'monokai t))
+#+end_src
+
+**** Dark+
+- The modeline, when un-selected, has the same background as files, making it hard to delineation between vertically split windows.
+#+begin_src emacs-lisp :tangle no
+  (use-package doom-themes
+    :ensure t
+    :custom (doom-dark+-blue-modeline nil)
+    :config (load-theme 'doom-dark+)
+    (set-face-background 'line-number
+                         (face-attribute 'default :background))
+    ;; default does not change filename settings when modified
+    (set-face-foreground 'doom-modeline-buffer-modified "red"))
+#+end_src
+
+**** Theme Default and time switches
+#+begin_src emacs-lisp
+  (jmn-load-gruvbox-dark-hard)
+  (run-at-time "6:00 am" nil #'jmn-load-gruvbox-light-medium)
+  (run-at-time "4:30 pm" nil #'jmn-load-gruvbox-dark-hard)
+#+end_src
 * General Emacs
 ** UI Configurations
 *** Basic
@@ -155,56 +207,6 @@ Save backups in =.emacs.d=.
   (use-package doom-modeline
     :init (doom-modeline-mode 1)
     :custom ((doom-modeline-height 15)))
-#+end_src
-
-*** Themes
-Only enable (tangle) one at a time.
-**** Gruvbox
-#+begin_src emacs-lisp
-  (use-package gruvbox-theme)
-
-  ; make load functions for run-at-time functions
-  (defun jmn-load-gruvbox-dark-hard ()
-    (interactive)
-    (load-theme 'gruvbox-dark-hard t)
-    (set-face-background 'line-number
-                         (face-attribute 'default :background))
-    (with-eval-after-load 'org
-      (set-face-foreground 'org-priority (face-foreground font-lock-constant-face))))
-
-  (defun jmn-load-gruvbox-light-medium()
-    (interactive)
-    (load-theme 'gruvbox-light-medium t)
-    (set-face-background 'line-number
-                         (face-attribute 'default :background))
-    (with-eval-after-load 'org
-      (set-face-foreground 'org-priority (face-foreground font-lock-constant-face))))
-#+end_src
-
-**** Monokia
-Good bright mode for bright days.
-#+begin_src emacs-lisp :tangle no
-  (use-package monokai-theme
-        :init (load-theme 'monokai t))
-#+end_src
-
-**** Dark+
-- The modeline, when un-selected, has the same background as files, making it hard to delineation between vertically split windows.
-#+begin_src emacs-lisp :tangle no
-  (use-package doom-themes
-    :ensure t
-    :custom (doom-dark+-blue-modeline nil)
-    :config (load-theme 'doom-dark+)
-    (set-face-background 'line-number
-                         (face-attribute 'default :background))
-    ;; default does not change filename settings when modified
-    (set-face-foreground 'doom-modeline-buffer-modified "red"))
-#+end_src
-
-**** Theme Default and time switches
-#+begin_src emacs-lisp
-  (run-at-time "6:00 am" nil #'jmn-load-gruvbox-light-medium)
-  (run-at-time "4:30 pm" nil #'jmn-load-gruvbox-dark-hard)
 #+end_src
 
 *** Transparency
@@ -1119,22 +1121,24 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
         `(("NEXT" .  ,(face-foreground font-lock-function-name-face))
           ("HOLD" . ,(face-foreground font-lock-builtin-face))))
 
-  (require 'find-lisp) (setq org-directory "~/Dropbox/gtd/")
+  (require 'find-lisp)
+  (setq org-directory "~/Dropbox/Documents/gtd/")
 
   (setq org-agenda-files (find-lisp-find-files org-directory "\.org$"))
 
   ;; level/maxlevel = order in hierarchy
   (setq org-refile-targets
-        '(("projects.org" :maxlevel . 2) ("someday.org" :maxlevel . 1)
-          ("whip.org" :level . 0) ("next.org" :level . 0)))
-
+        '(("projects.org" :maxlevel . 2)
+          ("someday.org" :maxlevel . 1)
+          ("whip.org" :level . 0)
+          ("next.org" :level . 0)))
 
   ;; https://github.com/syl20bnr/spacemacs/issues/3094
   (setq org-refile-use-outline-path 'file org-outline-path-complete-in-steps nil)
   (setq org-refile-allow-creating-parent-nodes 'confirm)
 
-  (setq org-agenda-prefix-format '((agenda . " %i %-8:c%t [%e] %s")
-                                   (todo . " %i %-8:c [%-4e] ")
+  (setq org-agenda-prefix-format '((agenda . " %i %-10:c%t [%e]% s")
+                                   (todo . " %i %-10:c [%-4e] ")
                                    (tags . " %i %-12:c")))
 
   (setq org-deadline-warning-days 30)
@@ -1164,8 +1168,7 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
                                               (org-agenda-files (list (concat org-directory  "projects.org")))))
                                        (todo "TODO"
                                              ((org-agenda-overriding-header "One-off Tasks")
-                                              (org-agenda-files (list (concat org-directory  "next.org")))
-                                              (org-agenda-files '("~/Dropbox/gtd/next.org")))
+                                              (org-agenda-files (list (concat org-directory  "next.org"))))
                                              (org-agenda-skip-function '(org-agenda-skip-entry-if
                                                                          'deadline 'scheduled)))))))
 
@@ -1241,7 +1244,7 @@ https://github.com/jethrokuan/.emacs.d/blob/master/init.el
 #+begin_src emacs-lisp
   ;; could set in the inbox header instead (where tags are set)
   (customize-set-variable 'org-global-properties
-                          '(("Effort_ALL" . "0:05 0:15 0:30 1:00 2:00 3:00")))
+                          '(("Effort_ALL" . "0:05 0:15 0:30 1:00 2:00 4:00")))
 
   (defun jmn/org-agenda-process-inbox-item ()
     "Process a single item in the org-agenda."
