--- a/emacs.org
+++ b/emacs.org
@@ -65,95 +65,6 @@ You can also use =M-x auto-package-update-now= to update right now!
 
 #+end_src
 
-* Theme
-** Setup and helpers
-
-#+begin_src emacs-lisp
-(setq custom-safe-themes t) ;; don't ask if theme is safe
-#+end_src
-
-#+begin_src emacs-lisp
-  (defun jmn-disable-theme()
-    (interactive)
-    (disable-theme (car custom-enabled-themes)))
-#+end_src
-
-** Themes
-*** Gruvbox
-#+begin_src emacs-lisp :tangle no
-  (use-package gruvbox-theme)
-
-  ; make load functions for run-at-time functions
-  (defun jmn-load-gruvbox-dark-hard ()
-    "Theme for dark time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'gruvbox-dark-hard t)
-    (set-face-background 'line-number
-                         (face-attribute 'default :background))
-    (with-eval-after-load 'org
-      (set-face-foreground 'org-priority (face-foreground font-lock-constant-face))))
-
-  (defun jmn-load-gruvbox-light-medium()
-    "Theme for light time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'gruvbox-light-medium t))
-
-    (defun jmn-load-gruvbox-light-hard()
-    "Theme for light time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'gruvbox-light-hard t))
-
-#+end_src
-
-*** Dark+
-- The modeline, when un-selected, has the same background as files, making it hard to delineation between vertically split windows.
-#+begin_src emacs-lisp :tangle no
-  (use-package doom-themes
-    :ensure t
-    :custom (doom-dark+-blue-modeline nil)
-    :config (load-theme 'doom-dark+)
-    (set-face-background 'line-number
-                         (face-attribute 'default :background))
-    ;; default does not change filename settings when modified
-    (set-face-foreground 'doom-modeline-buffer-modified "red"))
-#+end_src
-
-*** Doom-one
-#+begin_src emacs-lisp
-    (use-package doom-themes)
-  (defun jmn-load-doom-one()
-      "doom-one for dark time"
-      (interactive)
-      (disable-theme (car custom-enabled-themes))
-      (load-theme 'doom-one)
-      (with-eval-after-load 'org
-        (set-face-foreground 'org-priority (face-foreground font-lock-builtin-face))
-        (setq org-todo-keyword-faces
-              `(("NEXT" .  ,(face-foreground font-lock-type-face))
-                ("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
-
-
-    (defun jmn-load-doom-one-light()
-      "doom-one for light time"
-      (interactive)
-      (disable-theme (car custom-enabled-themes))
-      (load-theme 'doom-one-light)
-      (with-eval-after-load 'org
-        (setq org-todo-keyword-faces
-              `(("NEXT" .  ,(face-foreground font-lock-type-face))
-                ("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
-#+end_src
-
-** Default and time switches
-#+begin_src emacs-lisp
-  (jmn-load-doom-one)
-  (run-at-time "7:00 am" nil #'jmn-load-doom-one-light)
-  (run-at-time "4:30 pm" nil #'jmn-load-doom-one)
-#+end_src
-
 * General Emacs
 ** UI Configurations
 *** Basic
@@ -278,6 +189,7 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
 
   (use-package dashboard
     :ensure t
+
     :config
     (dashboard-setup-startup-hook)
     (setq dashboard-startup-banner 1)
@@ -296,7 +208,12 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
     (dashboard-modify-heading-icons '((recents . "file-text")))
 
     (setq dashboard-set-footer nil)
-    )
+
+    :bind ( :map dashboard-mode-map
+            ;; ("j"  .  nil)
+            ;; ("k"  .  nil)
+            ("n"  .  'dashboard-next-line)
+            ("p"  .  'dashboard-previous-line)))
 #+end_src
 
 ** Dired
@@ -476,47 +393,46 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
 
 *** Keybindings
 #+begin_src emacs-lisp
-  ;; general improvements
+   ;; general improvements
   (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
-  (global-set-key (kbd "C-x C-b") 'buffer-menu)   ;; open buffer menue in current buffer
-  (global-set-key (kbd "C-x C-k") 'kill-current-buffer)   ;; "C-x k" asks which buffer
-  (global-set-key (kbd "C-o") 'other-window)  ;; default is "C-x o"
-  (global-set-key (kbd "M-o") 'previous-multiframe-window)
-  (global-set-key (kbd "C-c C-c") 'eval-buffer)
-  (global-set-key (kbd "C-c C-r") 'eval-region)
+   (global-set-key (kbd "C-x C-b") 'buffer-menu)   ;; open buffer menue in current buffer
+   (global-set-key (kbd "C-x C-k") 'kill-current-buffer)   ;; "C-x k" asks which buffer
+   (global-set-key (kbd "C-o") 'other-window)  ;; default is "C-x o"
+   (global-set-key (kbd "M-o") 'previous-multiframe-window)
+   (global-set-key (kbd "C-c C-c") 'eval-buffer)
+   (global-set-key (kbd "C-c C-r") 'eval-region)
 
-  ;; Make font bigger/smaller.
-  (global-set-key (kbd "C-=") 'text-scale-increase)
-  (global-set-key (kbd "C--") 'text-scale-decrease)
-  (global-set-key (kbd "C-0") 'text-scale-adjust)
+   ;; Make font bigger/smaller.
+   (global-set-key (kbd "C-=") 'text-scale-increase)
+   (global-set-key (kbd "C--") 'text-scale-decrease)
+   (global-set-key (kbd "C-0") 'text-scale-adjust)
 
-  ;; Org notes flow
-  (global-set-key (kbd "<f5>") 'org-store-link)
-  (global-set-key (kbd "<f6>") 'org-insert-link)
- ;; (global-set-key (kbd "<f7>") 'org-agenda ;; set later!
+   ;; Org notes flow
+   (global-set-key (kbd "<f5>") 'org-store-link)
+   (global-set-key (kbd "<f6>") 'org-insert-link)
+  ;; (global-set-key (kbd "<f7>") 'org-agenda ;; set later!
   (global-set-key (kbd "<f8>") 'org-html-export-to-html)
 
-  ;; writing/editing
-  (global-set-key (kbd "<f9>") 'ispell-word)
-  (global-set-key (kbd "<f10>") 'dictionary-lookup-definition)
+   ;; writing/editing
+   (global-set-key (kbd "<f9>") 'ispell-word)
+   (global-set-key (kbd "<f10>") 'dictionary-lookup-definition)
 
-  ;; Buffer-menu-mode
-  (define-key Buffer-menu-mode-map (kbd "C-o") 'other-window)
-  (define-key Buffer-menu-mode-map (kbd "M-o") 'previous-multiframe-window)
-  ;; "o" opens in another buffer and moves focus
-  ;; "C-M-o" opens in another buffer and keeps focus in the Buffer-menu
-  (define-key Buffer-menu-mode-map (kbd "C-M-o") 'Buffer-menu-switch-other-window)
+   ;; Buffer-menu-mode
+   (define-key Buffer-menu-mode-map (kbd "C-o") 'other-window)
+   (define-key Buffer-menu-mode-map (kbd "M-o") 'previous-multiframe-window)
+   ;; "o" opens in another buffer and moves focus
+   ;; "C-M-o" opens in another buffer and keeps focus in the Buffer-menu
+   (define-key Buffer-menu-mode-map (kbd "C-M-o") 'Buffer-menu-switch-other-window)
 
-  ;; compilation-mode
-  (define-key compilation-mode-map (kbd "C-o") 'other-window)
+   ;; compilation-mode
+   (define-key compilation-mode-map (kbd "C-o") 'other-window)
 
-  ;; grep-mode
-  (defun jmn-grep-keybindings()
-    (define-key grep-mode-map (kbd "o") 'compilation-display-error)
-    (define-key grep-mode-map (kbd "C-o") 'other-window))
+   ;; grep-mode
+   (defun jmn-grep-keybindings()
+     (define-key grep-mode-map (kbd "o") 'compilation-display-error)
+     (define-key grep-mode-map (kbd "C-o") 'other-window))
 
-  (add-hook 'grep-mode-hook #'jmn-grep-keybindings)
-
+   (add-hook 'grep-mode-hook #'jmn-grep-keybindings)
 #+end_src
 
 *Possible TODO:* create my own keybindings as shown [[https://www.youtube.com/watch?v=xaZMwNELaJY][here]]. hydra ties related commands into short bindings with a common prefix.
@@ -1067,6 +983,7 @@ Use # -*- org-src-preserve-indentation: t; -*- when doing tangle/detangle with p
     ;; This is needed as of Org 9.2
     (require 'org-tempo)
     (add-to-list 'org-structure-template-alist '("la" . "src latex"))
+    (add-to-list 'org-structure-template-alist '("js" . "src js"))
     (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
     (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
     (add-to-list 'org-structure-template-alist '("py" . "src python  :results output"))
@@ -1146,81 +1063,82 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
 =Shft-right=  :  advance the todo state
 
 #+begin_src emacs-lisp
-    ;; Org Agenda ;; (setq org-agenda-window-setup 'reorganize-frame)
-    ;; Exited with ‘q’ or ‘x’ and the old state is restored.
-    (setq org-agenda-restore-windows-after-quit 1)
-    (setq org-agenda-span 'day)
+  ;; Org Agenda ;; (setq org-agenda-window-setup 'reorganize-frame)
+  ;; Exited with ‘q’ or ‘x’ and the old state is restored.
+  (setq org-agenda-restore-windows-after-quit 1)
+  (setq org-agenda-span 'day)
 
-    ;; SOMEDAY itmes are ommitted from GTD interface on purpose
-    (setq org-todo-keywords '((sequence "TODO(t)" "NEXT(n)" "HOLD(h)" "|"
-                                        "DONE(d)")))
+  ;; SOMEDAY itmes are ommitted from GTD interface on purpose
+  (setq org-todo-keywords '((sequence "TODO(t)" "NEXT(n)" "HOLD(h)" "|"
+                                      "DONE(d)")))
 
-    (require 'find-lisp)
-    (setq org-directory "~/Documents/gtd/")
+  (require 'find-lisp)
+  (setq org-directory "~/Documents/gtd/")
 
-    (setq org-agenda-files (find-lisp-find-files org-directory "\.org$"))
+  (setq org-agenda-files (find-lisp-find-files org-directory "\.org$"))
 
-    ;; level/maxlevel = order in hierarchy
-    (setq org-refile-targets
-          '(("projects.org" :maxlevel . 2)
-            ("someday.org" :maxlevel . 1)
-            ("whip.org" :level . 0)
-            ("next.org" :level . 0)))
+  ;; level/maxlevel = order in hierarchy
+  (setq org-refile-targets
+        '(("projects.org" :maxlevel . 2)
+          ("someday.org" :maxlevel . 1)
+          ("whip.org" :level . 0)
+          ("next.org" :level . 0)))
 
-    ;; https://github.com/syl20bnr/spacemacs/issues/3094
-    (setq org-refile-use-outline-path 'file org-outline-path-complete-in-steps nil)
-    (setq org-refile-allow-creating-parent-nodes 'confirm)
+  ;; https://github.com/syl20bnr/spacemacs/issues/3094
+  (setq org-refile-use-outline-path 'file org-outline-path-complete-in-steps nil)
+  (setq org-refile-allow-creating-parent-nodes 'confirm)
 
-    (setq org-agenda-prefix-format '((agenda . " %i %-10:c%t [%e]% s ")
-                                     (todo . " %i %-10:c [%-4e] ")
-                                     (tags . " %i %-12:c")))
+  (setq org-agenda-prefix-format '((agenda . " %i %-10:c%t [%e]% s ")
+                                   (todo . " %i %-10:c [%-4e] ")
+                                   (tags . " %i %-12:c")))
 
-    (setq org-deadline-warning-days 30)
+  (setq org-deadline-warning-days 30)
 
-    (setq org-agenda-start-with-log-mode t) ;; allows us to see closed in calendar
-    (setq org-log-done 'time) ;; creates CLOSED time tag
-    (setq org-log-into-drawer t) ;; creates a LOGBOOK drawer for notes
+  (setq org-agenda-start-with-log-mode t) ;; allows us to see closed in calendar
+  (setq org-log-done 'time) ;; creates CLOSED time tag
+  (setq org-log-into-drawer t) ;; creates a LOGBOOK drawer for notes
 
-    (setq org-agenda-custom-commands '(("d" "Dashboard"
-                                        ((agenda ""
-                                                 ((org-deadline-warning-days 30)))
-                                         (todo "NEXT"
-                                               ((org-agenda-overriding-header "Next Un-Scheduled Tasks")))
-                                         (todo "TODO"
-                                               ((org-agenda-overriding-header "Active Un-Scheduled Tasks")))))
-                                       (" " "Agenda"
-                                        ((agenda ""
-                                                 ((org-agenda-span 'day) (org-deadline-warning-days 365)))
-                                         (todo "TODO"
-                                               ((org-agenda-overriding-header "To Refile")
-                                                (org-agenda-files (list (concat org-directory "inbox.org")))))
-                                         (todo "NEXT"
-                                               ((org-agenda-overriding-header "In Progress")
-                                                (org-agenda-files (list (concat org-directory "projects.org")))))
-                                         (todo "TODO"
-                                               ((org-agenda-overriding-header "Projects")
-                                                (org-agenda-files (list (concat org-directory  "projects.org")))))
-                                         (todo "TODO"
-                                               ((org-agenda-overriding-header "One-off Tasks")
-                                                (org-agenda-files (list (concat org-directory  "next.org"))))
-                                               (org-agenda-skip-function '(org-agenda-skip-entry-if
-                                                                           'deadline 'scheduled)))))))
+  (setq org-agenda-custom-commands '(("d" "Dashboard"
+                                      ((agenda ""
+                                               ((org-deadline-warning-days 30)))
+                                       (todo "NEXT"
+                                             ((org-agenda-overriding-header "Next Un-Scheduled Tasks")))
+                                       (todo "TODO"
+                                             ((org-agenda-overriding-header "Active Un-Scheduled Tasks")))))
+                                     (" " "Agenda"
+                                      ((agenda ""
+                                               ((org-agenda-span 'day) (org-deadline-warning-days 365)))
+                                       (todo "TODO"
+                                             ((org-agenda-overriding-header "To Refile")
+                                              (org-agenda-files (list (concat org-directory "inbox.org")))))
+                                       (todo "NEXT"
+                                             ((org-agenda-overriding-header "In Progress")
+                                              (org-agenda-files (list (concat org-directory "projects.org")
+                                                                      (concat org-directory "next.org")
+                                                                      (concat org-directory "inbox.org")))))
+                                       (todo "TODO"
+                                             ((org-agenda-overriding-header "Projects")
+                                              (org-agenda-files (list (concat org-directory  "projects.org")))))
+                                       (todo "TODO"
+                                             ((org-agenda-overriding-header "One-off Tasks")
+                                              (org-agenda-files (list (concat org-directory  "next.org"))))
+                                             (org-agenda-skip-function '(org-agenda-skip-entry-if
+                                                                         'deadline 'scheduled)))))))
 
-    (defun jmn-someday() "Quick access to someday.org (no links in agenda)"
-           (interactive)
-           (find-file (concat org-directory "someday.org")))
+  (defun jmn-someday() "Quick access to someday.org (no links in agenda)"
+         (interactive)
+         (find-file (concat org-directory "someday.org")))
 
-    ;; remove "C-c a" for something else later?
-    (global-set-key (kbd "C-c a") (lambda (&optional args)
-                                    (interactive "P")
-                                    (org-agenda args " ")))
+  ;; remove "C-c a" for something else later?
+  (global-set-key (kbd "C-c a") (lambda (&optional args)
+                                  (interactive "P")
+                                  (org-agenda args " ")))
 
-    (global-set-key (kbd "<f7>") (lambda (&optional args)
-                                    (interactive "P")
-                                    (org-agenda args " ")))
+  (global-set-key (kbd "<f7>") (lambda (&optional args)
+                                  (interactive "P")
+                                  (org-agenda args " ")))
 
-
-    (setq org-agenda-todo-ignore-scheduled 'all)
+  (setq org-agenda-todo-ignore-scheduled 'all)
 #+end_src
 
 ** Habits
@@ -1391,6 +1309,150 @@ Between term-mode and eshell.
 ** eshell
 More customization in Elisp. Supports Tramp.
 
+* Theme
+** Setup and helpers
+
+#+begin_src emacs-lisp
+(setq custom-safe-themes t) ;; don't ask if theme is safe
+#+end_src
+
+#+begin_src emacs-lisp
+  (defun jmn-disable-theme()
+    (interactive)
+    (disable-theme (car custom-enabled-themes)))
+#+end_src
+
+** Themes
+*** Gruvbox
+#+begin_src emacs-lisp
+  (use-package gruvbox-theme)
+
+  (defun jmn-set-gruv-org-faces (props)
+    "Function used by all gruvbox themes for setting or faces"
+
+    (with-eval-after-load 'org
+      (set-face-foreground 'org-priority (face-foreground font-lock-constant-face))
+      (set-face-foreground 'org-agenda-done (alist-get 'done-color props))
+      (set-face-foreground 'org-headline-done (alist-get 'done-color props))
+      (set-face-foreground 'org-done (alist-get 'done-color props))
+
+      (setq org-todo-keyword-faces
+            `(("NEXT" . ,(face-foreground font-lock-function-name-face))
+              ("HOLD" . ,(face-foreground font-lock-builtin-face))
+              ("DONE" . ,(alist-get 'done-color props))))
+
+      (if (alist-get 'org-block props)
+          (set-face-background 'org-block (alist-get 'org-block props)))))
+
+
+  (defun jmn-load-gruvbox-dark-medium ()
+    "Theme for dark time"
+    (interactive)
+    (disable-theme (car custom-enabled-themes))
+    (load-theme 'gruvbox-dark-medium t)
+    (set-face-background 'line-number
+                         (face-attribute 'default :background))
+
+      (set-face-foreground 'default "PeachPuff3") ;; default "#ebdbb2"
+
+
+      (jmn-set-gruv-org-faces '((done-color . "gray35" ))))
+
+
+  (defun jmn-load-gruvbox-dark-hard ()
+    "Theme for very dark time"
+    (interactive)
+    (disable-theme (car custom-enabled-themes))
+    (load-theme 'gruvbox-dark-hard t)
+    (set-face-background 'line-number
+                         (face-attribute 'default :background))
+
+    (set-face-foreground 'default "PeachPuff3") ;; default "#ebdbb2"
+
+    (jmn-set-gruv-org-faces '((done-color . "gray35" )
+                              (org-block . "#282828"))))
+
+
+  (defun jmn-load-gruvbox-light-medium()
+    "Theme for light time"
+    (interactive)
+    (disable-theme (car custom-enabled-themes))
+    (load-theme 'gruvbox-light-medium t)
+
+    (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" ))))
+
+  (defun jmn-load-gruvbox-light-hard()
+    "Theme for very light time"
+    (interactive)
+    (disable-theme (car custom-enabled-themes))
+    (load-theme 'gruvbox-light-hard t)
+
+    (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" )
+                              (org-block . "#fbf1c7")))) ;; default "#f9f5d7"
+
+    (defun jmn-load-gruvbox-light-soft()
+    "Theme for very light time"
+    (interactive)
+    (disable-theme (car custom-enabled-themes))
+    (load-theme 'gruvbox-light-soft t)
+
+    (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" )
+                              (org-block . "#ebdbb2")))) ;; default "#f9f5d7"
+
+#+end_src
+*** Dark+
+- The modeline, when un-selected, has the same background as files, making it hard to delineation between vertically split windows.
+#+begin_src emacs-lisp :tangle no
+  (use-package doom-themes)
+
+  (defun jmn-load-dark+()
+    "Theme for very light time"
+    (interactive)
+    (disable-theme (car custom-enabled-themes))
+    (load-theme 'doom-dark+ t)
+    (set-face-background 'line-number
+                         (face-attribute 'default :background))
+    ;; default does not change filename settings when modified
+    (set-face-foreground 'doom-modeline-buffer-modified "red"))
+#+end_src
+
+*** Doom-one
+#+begin_src emacs-lisp
+    (use-package doom-themes)
+  (defun jmn-load-doom-one()
+      "doom-one for dark time"
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme 'doom-one)
+      (with-eval-after-load 'org
+        (set-face-foreground 'org-priority (face-foreground font-lock-builtin-face))
+        (setq org-todo-keyword-faces
+              `(("NEXT" .  ,(face-foreground font-lock-type-face))
+                ("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
+
+
+    (defun jmn-load-doom-one-light()
+      "doom-one for light time"
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme 'doom-one-light)
+      (with-eval-after-load 'org
+        (setq org-todo-keyword-faces
+              `(("NEXT" .  ,(face-foreground font-lock-type-face))
+                ("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
+#+end_src
+
+**  Default and time switches
+ #+begin_src emacs-lisp
+   (jmn-load-gruvbox-dark-hard)
+ #+end_src
+
+** Default and time switches
+#+begin_src emacs-lisp
+  ;; (jmn-load-doom-one)
+  ;; (run-at-time "7:00 am" nil #'jmn-load-doom-one-light)
+  ;; (run-at-time "4:30 pm" nil #'jmn-load-doom-one)
+#+end_src
 * Localwords                                                       :noexport:
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell  Dired dracula clangd ui
 #  LocalWords:  Grammarly workspaces commenter Pyright CMake Flyspell
